fix: Principal cards align

--- a/src/components/Banner/styles.css
+++ b/src/components/Banner/styles.css
@@ -4,6 +4,7 @@
 
 .banner img {
   width: 100%;
+  min-width: 1000px;
   max-height: 840px;
 }
 
